2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/main.c:
   Remove trailing directory separator for app->datadir and
   app->docdir for consistency with the other directory fields.


2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/filetypes.ada:
   Fix comments for Ada. Thanks to Jonas Baggett for reporting.


2010-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Makefile.am:
   Add install-data-only target to only install data/* to speed up
   testing.
 * src/editor.c:
   Fix not autocompleting when breaking lines.
 * data/filetypes.java, data/filetypes.cpp, data/filetypes.vala,
   data/colorschemes/alt.conf, data/filetypes.haxe,
   data/filetypes.common, data/filetypes.glsl,
   data/filetypes.actionscript, data/filetypes.cs,
   data/filetypes.ferite, data/filetypes.c, data/filetypes.javascript,
   data/filetypes.Genie.conf:
   Add named style 'extra', use for C-like filetypes.


2010-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.xml:
   Match data-* and aria-* as HTML attributes.
 * data/colorschemes/alt.conf, data/filetypes.common,
   data/filetypes.python:
   Make Python use named styles for color scheme support - use
   alt.conf color scheme if you want the old colors.
   Add named style 'function'.
 * src/plugindata.h:
   Move plugin_set_info prototype and parenthesize arguments for
   PLUGIN_SET_TRANSLATABLE_INFO (based on patch by Colomban Wendling,
   thanks).
   Fix putting pointer symbol before name, not after type.


2010-10-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/ui_utils.c:
   Fix notebook tab menu icons using theme for "text/plain" filetypes.
   Make filetype mime_type "text/plain" instead of NULL.


2010-10-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade: